--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
                 
                 <ul class="list card-list">
                     <li class="card-item">
-                        <a class="link" href="">
+                        <a class="link card-link" href="">
                             <img width="360" height="300" src="./images/portfolio/bankingapp.jpg"
                                 alt="Banking App Interface Concept">
                             <div class="name-card">
@@ -72,7 +72,7 @@
                         </a>
                     </li>
                     <li class="card-item">
-                        <a class="link" href="">
+                        <a class="link card-link" href="">
                             <img width="360" height="300" src="./images/portfolio/cashlesspayment.jpg" alt="Cashless Payment">
                             <div class="name-card">
                                 <h2 class="content-title card-text">Cashless Payment</h2>
@@ -81,7 +81,7 @@
                         </a>
                     </li>
                     <li class="card-item">
-                        <a class="link" href="">
+                        <a class="link card-link" href="">
                             <img width="360" height="300" src="./images/portfolio/meditationapp.jpg" alt="Meditation App">
                             <div class="name-card">
                                 <h2 class="content-title card-text">Meditation App</h2>
@@ -90,7 +90,7 @@
                         </a>
                     </li>
                     <li class="card-item">
-                        <a class="link" href="">
+                        <a class="link card-link" href="">
                             <img width="360" height="300" src="./images/portfolio/taxiservice.jpg" alt="Taxi Service">
                             <div class="name-card">
                                 <h2 class="content-title card-text">Taxi Service</h2>
@@ -99,7 +99,7 @@
                         </a>
                     </li>
                     <li class="card-item">
-                        <a class="link" href="">
+                        <a class="link card-link" href="">
                             <img width="360" height="300" src="./images/portfolio/screenilustrations.jpg" alt="Screen Illustrations">
                             <div class="name-card">
                                 <h2 class="content-title card-text">Screen Illustrations</h2>
@@ -108,7 +108,7 @@
                         </a>
                     </li>
                     <li class="card-item">
-                        <a class="link" href="">
+                        <a class="link card-link" href="">
                             <img width="360" height="300" src="./images/portfolio/onlinecources.jpg" alt="Online Courses">
                             <div class="name-card">
                                 <h2 class="content-title card-text">Online Courses</h2>
@@ -117,7 +117,7 @@
                         </a>
                     </li>
                     <li class="card-item">
-                        <a class="link" href="">
+                        <a class="link card-link" href="">
                             <img width="360" height="300" src="./images/portfolio/instagramstoriesconcept.jpg"
                                 alt="Instagram Stories Concept">
                             <div class="name-card">
@@ -127,7 +127,7 @@
                         </a>
                     </li>
                     <li class="card-item">
-                        <a class="link" href="">
+                        <a class="link card-link" href="">
                             <img width="360" height="300" src="./images/portfolio/organicfood.jpg" alt="Organic Food">
                             <div class="name-card">
                                 <h2 class="content-title card-text">Organic Food</h2>
@@ -136,7 +136,7 @@
                         </a>
                     </li>
                     <li class="card-item">
-                        <a class="link" href="">
+                        <a class="link card-link" href="">
                             <img width="360" height="300" src="./images/portfolio/freshcoffee.jpg" alt="Fresh Coffee">
                             <div class="name-card">
                                 <h2 class="content-title card-text">Fresh Coffee</h2>
@@ -149,13 +149,51 @@
         </section>
     </main>
     <footer class="footer-bgd conteiner">
-        <div class="conteiner">
-            <a class="logo link footer-link" href="./index.html" title="WebStudio">
-                Web<span class="logo-footer-studio">Studio</span>
-            </a>
-            <p class="footer-content">Increase the flow of customers and sales for your business with digital marketing &
-                growth
-                solutions.</p>
+        <div class="footer-div">
+            <div class="conteiner footer-box-logo">
+                <a class="logo link footer-link" href="./index.html" title="WebStudio">
+                    Web<span class="logo-footer-studio">Studio</span>
+                </a>
+                <p class="footer-content">Increase the flow of customers and sales for your business with digital marketing
+                    & growth
+                    solutions.
+                </p>
+            </div>
+            <div class="conteiner footer-box-media">
+                <p class="media-header">
+                    Social media
+                </p>
+                <ul class="media-list-ft">
+                    <li class="media-round-card">
+                        <a class="media-link-ft" href="">
+                            <svg class="media-team" width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="media-round-card">
+                        <a class="media-link-ft" href="">
+                            <svg class="media-team" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="media-round-card">
+                        <a class="media-link-ft" href="">
+                            <svg class="media-team" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="media-round-card">
+                        <a class="media-link-ft" href="">
+                            <svg class="media-team" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
