--- a/index.html
+++ b/index.html
@@ -327,9 +327,7 @@
                 </p>
             </div>
             <div class="conteiner footer-box-media">
-                <p class="media-header">
-                    Social media
-                </p>
+                <p class="media-header">Social media</p>
                 <ul class="media-list-ft">
                     <li class="media-round-card">
                         <a class="media-link-ft" href="">
