--- a/portfolio.html
+++ b/portfolio.html
@@ -150,16 +150,17 @@
     </main>
     <footer class="footer-bgd conteiner">
         <div class="footer-div">
-            <div class="conteiner footer-box-logo">
+            <div class="footer-box-logo">
                 <a class="logo link footer-link" href="./index.html" title="WebStudio">
                     Web<span class="logo-footer-studio">Studio</span>
                 </a>
                 <p class="footer-content">Increase the flow of customers and sales for your business with digital marketing
-                    & growth
+                    &
+                    growth
                     solutions.
                 </p>
             </div>
-            <div class="conteiner footer-box-media">
+            <div class="footer-box-media">
                 <p class="media-header">Social media</p>
                 <ul class="media-list-ft">
                     <li class="media-round-card">
