--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="./css/modern-normalize.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <header class="page-header">
         <div class="conteiner page-header-container">
@@ -24,24 +28,25 @@
                     <li class="menu-item"> <a class="menu-link link" href="">Contacts</a></li>
                 </ul>
             </nav>
-    
+
             <address class="contact-link">
                 <ul class="list contact-link">
                     <li>
-                        <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="contact-mail link contact-transition"
+                            href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li>
-                        <a class="contact-tel link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                        <a class="contact-mail link contact-transition" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
             </address>
         </div>
     </header>
     <main>
-        <section class="main-page conteiner">
+        <section class="main-page">
             <div class="conteiner">
-                <h1 class="main-header">Effective Solutions for Your Business</h1>      
-                <button class="order-button" type="button">Order Service</button>
+                <h1 class="main-header">Effective Solutions for Your Business</h1>
+                <button class="order-button" type="button" data-modal-open>Order Service</button>
             </div>
         </section>
         <section class="content-page">
@@ -55,8 +60,9 @@
                             </svg>
                         </div>
                         <h3 class="content-title value-header">Strategy</h3>
-                        <p class="content value-text">Our goal is to identify the business problem to walk away with the perfect and
-                                        creative solution. 
+                        <p class="content value-text">Our goal is to identify the business problem to walk away with the
+                            perfect and
+                            creative solution.
                         </p>
                     </li>
                     <li class="value-item">
@@ -66,8 +72,9 @@
                             </svg>
                         </div>
                         <h3 class="content-title value-header">Punctuality</h3>
-                        <p class="content value-text">Bring the key message to the brand's audience for the best price within the
-                                        shortest possible time.
+                        <p class="content value-text">Bring the key message to the brand's audience for the best price
+                            within the
+                            shortest possible time.
                         </p>
                     </li>
                     <li class="value-item">
@@ -77,8 +84,9 @@
                             </svg>
                         </div>
                         <h3 class="content-title value-header">Diligence</h3>
-                        <p class="content value-text">Research and confirm brands that present the strongest digital growth
-                                        opportunities and minimize risk.
+                        <p class="content value-text">Research and confirm brands that present the strongest digital
+                            growth
+                            opportunities and minimize risk.
                         </p>
                     </li>
                     <li class="value-item">
@@ -88,8 +96,9 @@
                             </svg>
                         </div>
                         <h3 class="content-title value-header">Technologies</h3>
-                        <p class="content value-text">Design practice focused on digital experiences. We bring forth a deep passion for
-                                        problem-solving.
+                        <p class="content value-text">Design practice focused on digital experiences. We bring forth a
+                            deep passion for
+                            problem-solving.
                         </p>
                     </li>
                 </ul>
@@ -108,10 +117,10 @@
                     <li class="service-item">
                         <img width="360" height="300" src="./images/image3.jpg" alt="both">
                     </li>
-                </ul>          
+                </ul>
             </div>
         </section>
-        <section class="team-page conteiner">
+        <section class="team-page">
             <div class="conteiner">
                 <h2 class="secondary-header service">Our Team</h2>
                 <ul class="list team-list">
@@ -190,10 +199,10 @@
                         </div>
                     </li>
                     <li class="list-item">
-                            <img width="264" height="260" src="./images/camilagarcia.jpg" alt="Camila Garcia">
+                        <img width="264" height="260" src="./images/camilagarcia.jpg" alt="Camila Garcia">
                         <div class="name">
-                           <h3 class="content-team-title">Camila Garcia</h3>
-                           <p class="content-paragraph">Marketing</p>
+                            <h3 class="content-team-title">Camila Garcia</h3>
+                            <p class="content-paragraph">Marketing</p>
                             <ul class="media-list">
                                 <li class="media-round-card">
                                     <a class="media-link-card" href="">
@@ -266,7 +275,7 @@
                 </ul>
             </div>
         </section>
-        <section class="conteiner content-page">
+        <section class="content-page">
             <div class="conteiner">
                 <h2 class="secondary-header service">Customers</h2>
                 <ul class="list customer-list">
@@ -316,14 +325,14 @@
             </div>
         </section>
     </main>
-    <footer class="footer-bgd conteiner">
-        <div class="footer-div">
+    <footer class="footer-bgd">
+        <div class="footer-div conteiner">
             <div class="footer-box-logo">
                 <a class="logo link footer-link" href="./index.html" title="WebStudio">
                     Web<span class="logo-footer-studio">Studio</span>
                 </a>
-                <p class="footer-content">Increase the flow of customers and sales for your business with digital marketing &
-                    growth
+                <p class="footer-content">Increase the flow of customers and sales for your business with digital
+                    marketing & growth
                     solutions.
                 </p>
             </div>
@@ -362,5 +371,16 @@
             </div>
         </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="close-button" data-modal-close>
+                <svg width="8" height="8" class="close-button-svg">
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./modal.js"></script>
 </body>
+
 </html>
