--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="./css/modern-normalize.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <header class="page-header">
         <div class="conteiner page-header-container">
@@ -25,14 +30,15 @@
                     <li class="menu-item"> <a class="menu-link link" href="">Contacts</a></li>
                 </ul>
             </nav>
-    
+
             <address class="contact-link">
                 <ul class="list contact-link">
                     <li>
-                        <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="contact-mail link contact-transition"
+                            href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li>
-                        <a class="contact-tel link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                        <a class="contact-tel link contact-transition" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
             </address>
@@ -59,12 +65,19 @@
                         <button class="content-button" type="button">Marketing</button>
                     </li>
                 </ul>
-                
+
                 <ul class="list card-list">
                     <li class="card-item">
                         <a class="link card-link" href="">
-                            <img width="360" height="300" src="./images/portfolio/bankingapp.jpg"
-                                alt="Banking App Interface Concept">
+                            <div class="wraper">
+                                <img width="360" height="300" src="./images/portfolio/bankingapp.jpg"
+                                    alt="Banking App Interface Concept">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App · Exotic Fruit Ecommerce
+                                    App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
                             <div class="name-card">
                                 <h2 class="content-title card-text">Banking App Interface Concept</h2>
                                 <p class="content card-text">App</p>
@@ -73,7 +86,16 @@
                     </li>
                     <li class="card-item">
                         <a class="link card-link" href="">
-                            <img width="360" height="300" src="./images/portfolio/cashlesspayment.jpg" alt="Cashless Payment">
+                            <div class="wraper">
+                                <img width="360" height="300" src="./images/portfolio/cashlesspayment.jpg"
+                                    alt="Cashless Payment">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App · Exotic
+                                    Fruit Ecommerce
+                                    App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
                             <div class="name-card">
                                 <h2 class="content-title card-text">Cashless Payment</h2>
                                 <p class="content card-text">Marketing</p>
@@ -82,7 +104,16 @@
                     </li>
                     <li class="card-item">
                         <a class="link card-link" href="">
-                            <img width="360" height="300" src="./images/portfolio/meditationapp.jpg" alt="Meditation App">
+                            <div class="wraper">
+                                <img width="360" height="300" src="./images/portfolio/meditationapp.jpg"
+                                    alt="Meditation App">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App · Exotic
+                                    Fruit Ecommerce
+                                    App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
                             <div class="name-card">
                                 <h2 class="content-title card-text">Meditation App</h2>
                                 <p class="content card-text">App</p>
@@ -91,7 +122,16 @@
                     </li>
                     <li class="card-item">
                         <a class="link card-link" href="">
-                            <img width="360" height="300" src="./images/portfolio/taxiservice.jpg" alt="Taxi Service">
+                            <div class="wraper">
+                                <img width="360" height="300" src="./images/portfolio/taxiservice.jpg"
+                                    alt="Taxi Service">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App · Exotic
+                                    Fruit Ecommerce
+                                    App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
                             <div class="name-card">
                                 <h2 class="content-title card-text">Taxi Service</h2>
                                 <p class="content card-text">Marketing</p>
@@ -100,7 +140,16 @@
                     </li>
                     <li class="card-item">
                         <a class="link card-link" href="">
-                            <img width="360" height="300" src="./images/portfolio/screenilustrations.jpg" alt="Screen Illustrations">
+                            <div class="wraper">
+                                <img width="360" height="300" src="./images/portfolio/screenilustrations.jpg"
+                                    alt="Screen Illustrations">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App · Exotic
+                                    Fruit Ecommerce
+                                    App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
                             <div class="name-card">
                                 <h2 class="content-title card-text">Screen Illustrations</h2>
                                 <p class="content card-text">Design</p>
@@ -109,7 +158,16 @@
                     </li>
                     <li class="card-item">
                         <a class="link card-link" href="">
-                            <img width="360" height="300" src="./images/portfolio/onlinecources.jpg" alt="Online Courses">
+                            <div class="wraper">
+                                <img width="360" height="300" src="./images/portfolio/onlinecources.jpg"
+                                    alt="Online Courses">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App · Exotic
+                                    Fruit Ecommerce
+                                    App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
                             <div class="name-card">
                                 <h2 class="content-title card-text">Online Courses</h2>
                                 <p class="content card-text">Marketing</p>
@@ -118,8 +176,16 @@
                     </li>
                     <li class="card-item">
                         <a class="link card-link" href="">
-                            <img width="360" height="300" src="./images/portfolio/instagramstoriesconcept.jpg"
-                                alt="Instagram Stories Concept">
+                            <div class="wraper">
+                                <img width="360" height="300" src="./images/portfolio/instagramstoriesconcept.jpg"
+                                    alt="Instagram Stories Concept">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App · Exotic
+                                    Fruit Ecommerce
+                                    App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
                             <div class="name-card">
                                 <h2 class="content-title card-text">Instagram Stories Concept</h2>
                                 <p class="content card-text">Design</p>
@@ -128,7 +194,16 @@
                     </li>
                     <li class="card-item">
                         <a class="link card-link" href="">
-                            <img width="360" height="300" src="./images/portfolio/organicfood.jpg" alt="Organic Food">
+                            <div class="wraper">
+                                <img width="360" height="300" src="./images/portfolio/organicfood.jpg"
+                                    alt="Organic Food">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App · Exotic
+                                    Fruit Ecommerce
+                                    App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
                             <div class="name-card">
                                 <h2 class="content-title card-text">Organic Food</h2>
                                 <p class="content card-text">Web Site</p>
@@ -137,7 +212,16 @@
                     </li>
                     <li class="card-item">
                         <a class="link card-link" href="">
-                            <img width="360" height="300" src="./images/portfolio/freshcoffee.jpg" alt="Fresh Coffee">
+                            <div class="wraper">
+                                <img width="360" height="300" src="./images/portfolio/freshcoffee.jpg"
+                                    alt="Fresh Coffee">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App · Exotic
+                                    Fruit Ecommerce
+                                    App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
                             <div class="name-card">
                                 <h2 class="content-title card-text">Fresh Coffee</h2>
                                 <p class="content card-text">Web Site</p>
@@ -150,17 +234,17 @@
     </main>
     <footer class="footer-bgd conteiner">
         <div class="footer-div">
-            <div class="footer-box-logo">
+            <div class="conteiner footer-box-logo">
                 <a class="logo link footer-link" href="./index.html" title="WebStudio">
                     Web<span class="logo-footer-studio">Studio</span>
                 </a>
-                <p class="footer-content">Increase the flow of customers and sales for your business with digital marketing
-                    &
-                    growth
+                <p class="footer-content">Increase the flow of customers and sales for your business with digital
+                    marketing
+                    & growth
                     solutions.
                 </p>
             </div>
-            <div class="footer-box-media">
+            <div class="conteiner footer-box-media">
                 <p class="media-header">Social media</p>
                 <ul class="media-list-ft">
                     <li class="media-round-card">
@@ -196,4 +280,5 @@
         </div>
     </footer>
 </body>
+
 </html>
