--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebStudio</title>
+    <title>WebStudio-Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="./css/modern-normalize.min.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <header class="page-header">
-        <div class="conteiner page-header-container">
+        <div class="container page-header-container">
             <nav class="navigation">
                 <a class="logo link" href="./index.html" title="WebStudio">
                     Web<span class="logo-header-studio">Studio</span>
@@ -28,15 +30,14 @@
                     <li class="menu-item"> <a class="menu-link link" href="">Contacts</a></li>
                 </ul>
             </nav>
-
+    
             <address class="contact-link">
                 <ul class="list contact-link">
                     <li>
-                        <a class="contact-mail link contact-transition"
-                            href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li>
-                        <a class="contact-mail link contact-transition" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                        <a class="contact-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
             </address>
@@ -44,13 +45,13 @@
     </header>
     <main>
         <section class="main-page">
-            <div class="conteiner">
+            <div class="container">
                 <h1 class="main-header">Effective Solutions for Your Business</h1>
                 <button class="order-button" type="button" data-modal-open>Order Service</button>
             </div>
         </section>
-        <section class="content-page">
-            <div class="conteiner">
+        <section class="content-page-values">
+            <div class="container">
                 <h2 hidden class="secondary-header">our values</h2>
                 <ul class="list values-list">
                     <li class="value-item">
@@ -104,8 +105,8 @@
                 </ul>
             </div>
         </section>
-        <section class="content-page">
-            <div class="conteiner">
+        <section class="content-page-activities">
+            <div class="container">
                 <h2 class="secondary-header service">What are we doing</h2>
                 <ul class="list service-list">
                     <li class="service-item">
@@ -121,7 +122,7 @@
             </div>
         </section>
         <section class="team-page">
-            <div class="conteiner">
+            <div class="container">
                 <h2 class="secondary-header service">Our Team</h2>
                 <ul class="list team-list">
                     <li class="list-item">
@@ -275,8 +276,8 @@
                 </ul>
             </div>
         </section>
-        <section class="content-page">
-            <div class="conteiner">
+        <section class="content-page-customers">
+            <div class="container">
                 <h2 class="secondary-header service">Customers</h2>
                 <ul class="list customer-list">
                     <li class="customer-item">
@@ -326,7 +327,7 @@
         </section>
     </main>
     <footer class="footer-bgd">
-        <div class="footer-div conteiner">
+        <div class="footer-div container">
             <div class="footer-box-logo">
                 <a class="logo link footer-link" href="./index.html" title="WebStudio">
                     Web<span class="logo-footer-studio">Studio</span>
