--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 
 <body>
     <header class="page-header">
-        <div class="conteiner page-header-container">
+        <div class="container page-header-container">
             <nav class="navigation">
                 <a class="logo link" href="./index.html" title="WebStudio">
                     Web<span class="logo-header-studio">Studio</span>
@@ -30,15 +30,14 @@
                     <li class="menu-item"> <a class="menu-link link" href="">Contacts</a></li>
                 </ul>
             </nav>
-
+    
             <address class="contact-link">
                 <ul class="list contact-link">
                     <li>
-                        <a class="contact-mail link contact-transition"
-                            href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li>
-                        <a class="contact-tel link contact-transition" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                        <a class="contact-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
             </address>
@@ -46,7 +45,7 @@
     </header>
     <main>
         <section class="content-page-portfolio">
-            <div class="conteiner">
+            <div class="container">
                 <h1 hidden>Content</h1>
                 <ul class="list menu">
                     <li>
@@ -232,19 +231,18 @@
             </div>
         </section>
     </main>
-    <footer class="footer-bgd conteiner">
-        <div class="footer-div">
-            <div class="conteiner footer-box-logo">
+    <footer class="footer-bgd">
+        <div class="footer-div container">
+            <div class="footer-box-logo">
                 <a class="logo link footer-link" href="./index.html" title="WebStudio">
                     Web<span class="logo-footer-studio">Studio</span>
                 </a>
                 <p class="footer-content">Increase the flow of customers and sales for your business with digital
-                    marketing
-                    & growth
+                    marketing & growth
                     solutions.
                 </p>
             </div>
-            <div class="conteiner footer-box-media">
+            <div class="footer-box-media">
                 <p class="media-header">Social media</p>
                 <ul class="media-list-ft">
                     <li class="media-round-card">
